open java.lang