@@ -1,3 +1,4 @@
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
 --add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
